--- a/apps/infrastructure/homepage-secrets.sops.yaml
+++ b/apps/infrastructure/homepage-secrets.sops.yaml
@@ -5,22 +5,23 @@ metadata:
   namespace: infrastructure
 type: Opaque
 stringData:
-  HOMEPAGE_VAR_AUTHENTIK_API_KEY: ENC[AES256_GCM,data:PC+bWPCs8c+vupkXA+A57qTi7iFfzKacFa4EK7UTrp9TerjTg2YLpeOdCYSyzjv8l9kS6Gz/JAPDEXk2,iv:eprFDn9kB9Hw4dSS/WX+tivGKj9xA4Mba0HHghOSppc=,tag:NERF2Wb5iD6ds2EJcpNRWg==,type:str]
-  HOMEPAGE_VAR_CHANGEDETECTION_API_KEY: ENC[AES256_GCM,data:w7OshQBvU1IhdXOiVdGxD6DJ844vAOuaIdalD1c/jy4=,iv:dLdpSBSSmqs3c6M0NdLW2kBCbwjQuT6N/d65D9fdDSk=,tag:bRv9kUb8XslQajxAU192tw==,type:str]
-  HOMEPAGE_VAR_AUDIOBOOKSHELF_API_KEY: ENC[AES256_GCM,data:hQpr2pc++15h1IeHiWlLctAlsk6eR6nTYyehZHyGrRlZe4RyHZmGwi6StI+ZYzcu3FPQzqxTLUeE04vCuZfQbaS8gJwQgOpe2eCYw3Isn8YstyL79IhAEguObv2Cvgr9j5pEdcedSJU95g2Qn/ffkONdFunAlxwC77Fu4ViToP6jBhKN0e4GI9ol7Q1vDaugUZmoDqwgihXuzsRyuTZ9wKkWEMMprcE1CaYjB0OmZC+LpwmF8t9K/W9kAaeccZy9b2LfZ7qX61XcCP0JGJ3uAw==,iv:ph6RcF6WxSNxlsjpKZy2D8w316XcQ4SJv+JvJyxRmVc=,tag:AHUxrYyyshk69uMAQwfLDw==,type:str]
-  HOMEPAGE_VAR_PROXMOX_API_SECRET: ENC[AES256_GCM,data:KS1RI+r3jR2ZE0D5ml68WEoCr3Ivcl4wqYEvcg9+YIIBPmoT,iv:Jrl+kBM2GJea4L43Ipb+jQ0FJn3vgzHLuwmWLfiuaJ4=,tag:6ZzZMC/EF+/smGeAMy8GsQ==,type:str]
+  HOMEPAGE_VAR_AUTHENTIK_API_KEY: ENC[AES256_GCM,data:VBVVrys4dZNtG1nAgl70eupj1jCf9glYsMHHSuMfXHDbdp3CxwJVILx1/yCbaITRq0E93y5NoBoLtFDo,iv:lbiiooF4d69HAObuSPLCYOIwrItNwbpTqcU4huBTrPo=,tag:8q+iicXmWpsO/W9HKIz9ew==,type:str]
+  HOMEPAGE_VAR_CHANGEDETECTION_API_KEY: ENC[AES256_GCM,data:iHoXD+KKlXwzCdv+m2pD7dhag9nPkRN9kIo6DJ2fd5g=,iv:2hYdgaciLuPJoG9ATbnCrjbXZW8UNc/RzESO0RRS30o=,tag:i2AjP5VOa77BO5VRxM0EHQ==,type:str]
+  HOMEPAGE_VAR_AUDIOBOOKSHELF_API_KEY: ENC[AES256_GCM,data:pvqLPNfK3Qaq38Zd2HSk3x6HhE+nlKvfvxZQxfsqfkcQ9QhbRnmntj85X7sdM1nWx47+rhrWSkDo6JLv0fQ1KiS6Q1ttAgQU37O8rUMzyt1gveECNkR/tJGUqQkzzW+yk1cLUANyBFuK7Q58x4DopeFUUcP3MNFIq4OGathXP2NCkZ2//+eWt+vjXs2nHqaqn1f2H2eFmL4PqNAccTXJJc5Zn1IaW5KZnCLL/IgNphQmWsEUJjcQWOWfOh5XJcEquuY0zi3LnFqH7CC8vQCI8A==,iv:vzIdqgR+7Wq5AFODMUf6VK00eKiSCdElREGfu5T/kLo=,tag:kxOfPN91Gyufiuub1qeMVg==,type:str]
+  HOMEPAGE_VAR_PROXMOX_API_SECRET: ENC[AES256_GCM,data:CcLoq0DqHAcPPsRzAcsVBv5ZVyEn2llZXyauRvgNH4nU0OSW,iv:ZLYyJgKiaJdwMqKLDaQ8C3I0YDyp0Tx1bXoSQoUMOGM=,tag:7AAlR+qgfn8+1KHaPyMWAQ==,type:str]
+  HOMEPAGE_VAR_PLEX_TOKEN: ENC[AES256_GCM,data:lw7BjNKhe3IeJwgI6D4dk5WddMM=,iv:ipD2qXyepZGk7YXY3+SsEbCHKStyNkF4Rpf8+Qa/urM=,tag:FxrOZePZ/fLMdDWuVXDQjQ==,type:str]
 sops:
   age:
     - recipient: age1txdhl8zae9a6kh6ggxydmrtstueysr32dd9fchlrp9x7n3ywhd7qzrn4k4
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuRXMyRC9mdGVBT1JaRnB2
-        NWxZQjRuMC9oQUxDZ21hNUtlZ2c5MG5YRFFBClc1YXJUSnkxdnZIZUdtU0NMNjFC
-        elRSS3VpV3pRWmE3cXR1YTNhNTdoQ28KLS0tIDgyWlpsRGplM2dtdzkyMElHd0lx
-        bjBvNHpKSGZrNGxUb0RFbkZSNFFDQXcKG9WlgsyWQAJrfwm5FN628iUZiC1Dm6F/
-        9Jsn/az9Dm3bt0dD7VbhGkxEzMtvy3ZD3dWlBDyXjFpkZJnkqEX9HQ==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3NHFGaWI4QXJTWGxnUkRk
+        NWxNTHpBZ053NkdYdndUZHEvaHdwM3dTT2hjCk1tbjA5NmpFNGE0R0pHMVJrTloy
+        eXoxSEhPTkovcWNQRnlZL210clRBVW8KLS0tIDJhbGdvczRDRnppUU9HS2pBNWht
+        U1l3MDBIN2tPYXBrNWhvU0g0VXpVdXcKOvTQdM/TNVr8dBfYULo1+Q6zCHEIe497
+        6ok5yGW0lLVGFBVkbHDvMjTvy8MQ03hUn0bg3TWfoygrwM1aitl7dQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-02-14T11:48:53Z"
-  mac: ENC[AES256_GCM,data:htQlBsakdCzKTifx5CMsML7X19maJ/66swuaCD4GcQ7EKJsNoJFkTazUZltfOSpFqSaELXvlQJwxcR1LIGRqI9KjudL7q1uN++vD2W1uTOOHlaMexSzCEeOwpcODKJIY5keyR4zQ6DmPfNuRX6LN3oIZsGNb2shPsyvMmvVY1YY=,iv:m5HQNMByYdY2AnFvLrihfR5sJPpBiI+t8hMNQwFwutw=,tag:MEbAaiQWnh7IV7gpBZA4eQ==,type:str]
+  lastmodified: "2026-02-14T12:09:22Z"
+  mac: ENC[AES256_GCM,data:RcUJ0zVQmaNYepfl/MeJ611DJoBa7e+lJepcXYAJtMS51XqKvNSR/XjpWKNigMWv6jzL5xLitv9Fv1al5F7snESiPL8xXS3POD8lOVExvG+unNHd3JZGNVnlxvKL+CApNkgXP8aRxDJONx96td8Pth2DOtzk89LRq+8bn1MC2VU=,iv:nhVpLoIeotn0eaDtE20P1oFluGf44XZZ8FU6jxIPvPg=,tag:mrXM5uSvEs/1uO1Hjv3Uog==,type:str]
   encrypted_regex: ^(stringData)$
   version: 3.11.0
