--- a/apps/infrastructure/homepage-secrets.sops.yaml
+++ b/apps/infrastructure/homepage-secrets.sops.yaml
@@ -5,23 +5,25 @@ metadata:
   namespace: infrastructure
 type: Opaque
 stringData:
-  HOMEPAGE_VAR_AUTHENTIK_API_KEY: ENC[AES256_GCM,data:Zg3/rnONwCv9V7CZ+lL9j/MpBLWQFDlislYQV1pXdH5gT4S4qmgZKoogifkH4Pawi98kzV3aPkbJFugq,iv:kbs7Kg0gRZmcbLVn4Vttu/zgN8E26tzsdh2k/MpXJC4=,tag:CPVbMv1/UO/rU5yCuJkitQ==,type:str]
-  HOMEPAGE_VAR_CHANGEDETECTION_API_KEY: ENC[AES256_GCM,data:Ac3lfpol79s39rYzb0vtNxxtgHIsIHWc7qy7KS1ZHUQ=,iv:fPu22AGdQyR5hxHACBjrd5+vcUBzdiZMmFXP65dVsCw=,tag:D2oCadqrKi4hC7RghRLJZg==,type:str]
-  HOMEPAGE_VAR_AUDIOBOOKSHELF_API_KEY: ENC[AES256_GCM,data:HtEHc/ThCtUjeZXxsJ+436wCtwL0ipkxV5FolhiygMIOZYKhVdCoB0djIplV54zi5tqbgyyd7TstkYKUsuB+GVrwS2JAvIzJvArbPt4pleUQPI8xoXm/cu1iPfWf/+TO0NuQVgsmx69CwbdOTIRqRLK6Qn6/PGg9M/0ETNifD1OK5Y9fScV3592cA1o+eIiIsbroUCKGAgTxnL1ffJqaplTq72R69NIPRcg3FKl75ey1dPD0nUm8CViKJ/KXarrWaukrJDsJXtdOCAnvmWTSiA==,iv:HcQP/ykdzxhWx1kXboUIEfJZy92YIlIe6fjUt2pJ+b8=,tag:F3apXn4JUf3UDr4PJcyu9Q==,type:str]
-  HOMEPAGE_VAR_PROXMOX_API_SECRET: ENC[AES256_GCM,data:eKgqfXUzlZ7T6Nmaq0wPq/M6oJWSmNOqfl+ExRlRP9lSHeXx,iv:6BVcZTcRiGf2ZS9uAgchW51PxSTEpfDl0KXmgi5f+8k=,tag:bfBjp8OxBe2+e1g6ji9DvQ==,type:str]
-  HOMEPAGE_VAR_PLEX_TOKEN: ENC[AES256_GCM,data:llbDilwCuibuwyQfkM4v5qS/K2k=,iv:p/Tc/ob73jQcvOwQypRBUQIUQezP5w5/XpxqUY8wq2g=,tag:XdhQ7uh3/x9D7tkINicUVA==,type:str]
+  HOMEPAGE_VAR_AUTHENTIK_API_KEY: ENC[AES256_GCM,data:cTQjEfbU1A1FWv2cS4X2g1jtleI+txE09Ob6hZhhiSnnqLRCKqu4bzxhlyfIC+ybOyuu1lcK5Dd37rcy,iv:ydyfc9tsVhoRcJVHkg1f/KahdoUp1n4860te1mrED2w=,tag:ps8NrVT8WgmI3Jry/ZpoQA==,type:str]
+  HOMEPAGE_VAR_CHANGEDETECTION_API_KEY: ENC[AES256_GCM,data:2MdobnYIp5u2xX8YCU9Y159DYpJ5f8t/epxy3N+ClC0=,iv:8FckfJd3XGgys1RHhuX1RpnM9jl/VLYUj6OWCM2RD0w=,tag:r+fOLz94Ug8d8nJpuSAJMQ==,type:str]
+  HOMEPAGE_VAR_AUDIOBOOKSHELF_API_KEY: ENC[AES256_GCM,data:lNGmchALP3bkMVASmaCv7hu+5bvQlp9emTFedX21X0zBPfHWrzMMqWtSebutIVEgnGxEU4PAlI6QdU/exiszqqkLaDhaE6Znh9NiXMeNPRqgS2DrlV4Mg53pD8I52RdQHMCKKg213iAoniM3wgWoA1SnVKr3HLipt4iSF44c2oGe3en7HP1YAfgim2gnXw4SbOlQjBhVN57RuYjiQKPDufSTsk6L60QExND+cu2fwpRH/hYTOlWZgELfuoHmcgj6vLPhYCm1P3rx7wsdvFJS3w==,iv:7V5eygCDZeA0ELl9EXS1ItJGYt6VoGMyTR7ytT6Svcw=,tag:eJ2VlUW/Y2OgDfRWhmNF9A==,type:str]
+  HOMEPAGE_VAR_PROXMOX_API_SECRET: ENC[AES256_GCM,data:lq3oYVB57iuE2Y3jwW6E4YTf2Nu2d2YF2Z7R75pjiFbvrGqR,iv:O92BhmYXWYGTsVre8LzXCO5Yy1NpB0jCSG2/Ws8zPY0=,tag:1A+0D15BvR3iXeyQGoWy1w==,type:str]
+  HOMEPAGE_VAR_PLEX_TOKEN: ENC[AES256_GCM,data:CW1bKfDM3tVVHQLcFJSZH94ja6Q=,iv:uAL5YwYUViSay6b3oPiEeSGe9vPGdf/bRCUgOUMYNKM=,tag:tVPd69IzlR/rNWBqaucCcw==,type:str]
+  HOMEPAGE_VAR_UNIFI_USERNAME: ENC[AES256_GCM,data:EU0Rk0Lbo62funfMrA==,iv:iDzIMYJ72vHQuJg8RWJh4v+RBD6jUI30fsqN50KxnHI=,tag:XRiD4BPzw3F7GTleZpbfUQ==,type:str]
+  HOMEPAGE_VAR_UNIFI_PASSWORD: ENC[AES256_GCM,data:AjuDOhfnVKai+/hDpfdUH7xH0P0=,iv:5cfiZH1Gdg4Pu2OlcD+wNSBhCjFfi9Or6lpuoelVJcQ=,tag:rELv3NJL7CYrNaKyf/qFug==,type:str]
 sops:
   age:
     - recipient: age1txdhl8zae9a6kh6ggxydmrtstueysr32dd9fchlrp9x7n3ywhd7qzrn4k4
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByd0V0amVCZVFiZTNLeGg3
-        bEgvZDZadVp5YWx0WlkyNWRmWUNFZS9CYWp3CkkzcEtmSHFlaXNhSGU4djV6ZGQz
-        NC9yRHlHZnhoQWNVVTlPWURrYi9NMzgKLS0tIGt0THFlWEIyUC9HN3JuTTYvdEpQ
-        d0tEbldBbnA5di9HN01YYjZIcmlCMUUKOVKn//dXW8n+pjA6epmrSD9fnUu4MM2J
-        0V1otebJC0XcmPcGGXL+Gu4gr1hEUoZ4qKrPPI1jo/O78+TUrk98aQ==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxYzY5a1lPOFlhVU4wbUJX
+        MEI0Sjl0WkNjZWtNeVd3cSs2TWkxOWtoMDBBCmpPRHBqNXVQc3RneXd5TlZlcXdU
+        V1hDUjBMUC9IQWNYMU1QYjFwMXR3eTAKLS0tIEFlSWJXeVF5RzNaU1pySmI5RXlr
+        Tk1BTUQzUHNMUU5zRUg3NHFoYVVITUEKeu2L2iL6/wbZZkhibL38tLsF+nXOL32z
+        U3Ud0uJfira7OIQEtGwxX8N5TxFTXp4ZObN8EJmPVRaxGx5JkNUSzA==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-02-14T12:15:19Z"
-  mac: ENC[AES256_GCM,data:5ASgBCTc6qFksco4OFvR/prtRcXVtEsbu8novEPxuBZyO8lz+jyA+5hOlWlZssuMvLPmeDME+xa6VHJhABe0OU/+yOEFNF74yli9IQ9w35QS7598pNiQSseGZ/vricsImGvynXpUBkwRYzKkAb6Hibu3cEAgBwYT6Vv64LjxmKU=,iv:VwNUe1r9cwCO2D/rniLb+Bx9EDMgKbYZ26CioHfMGL0=,tag:8qNGODhzTbjIL+DSryQSeA==,type:str]
+  lastmodified: "2026-02-14T12:25:06Z"
+  mac: ENC[AES256_GCM,data:w3cfTHSQsL53careueUn7yHgJ+VRB8c+tsRSl22FhploU2HTRr65u+3+6mAJXo9dyQsNYTIgXYAay6LR0MLGZtXERY+Zd0eEvjsqQbAxqu5Lh4DYmS4svyAAy1iwR1LkI4GsJmILTkasb2vtgbHH4rJ+BkQP7Lf553oQPWKmjE8=,iv:cpvbaQkObvZdRZECBsw+h+dPqdXgBRWuYBQLTD2CcGQ=,tag:YMbKgqMPwKjcmg5b9skZPg==,type:str]
   encrypted_regex: ^(stringData)$
   version: 3.11.0
