--- a/apps/infrastructure/homepage-config.yaml
+++ b/apps/infrastructure/homepage-config.yaml
@@ -46,6 +46,11 @@ data:
         url: https://unifi.romanpeters.nl
         username: "{{HOMEPAGE_VAR_UNIFI_USERNAME}}"
         password: "{{HOMEPAGE_VAR_UNIFI_PASSWORD}}"
+  kubernetes.yaml: |
+    mode: cluster
+    ingress: false
+    traefik: false
+    gateway: false
   bookmarks.yaml: |
     []
   services.yaml: |
