--- a/apps/system/trivy-operator-helmrelease.yaml
+++ b/apps/system/trivy-operator-helmrelease.yaml
@@ -21,3 +21,6 @@ spec:
   values:
     operator:
       vulnerabilityReportsEnabled: true
+      scannerReportTTL: "6h"
+    trivy:
+      ignoreUnfixed: true
