--- a/apps/media/immich-redis.yaml
+++ b/apps/media/immich-redis.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: redis
-          image: redis:7.4.7-alpine
+          image: redis:7.4.7-alpine3.21
           imagePullPolicy: IfNotPresent
           ports:
             - name: redis
