Set explicit transmission resource limits to satisfy quota

--- a/apps/media/transmission-deployment.yaml
+++ b/apps/media/transmission-deployment.yaml
@@ -26,6 +26,13 @@ spec:
             - /bin/sh
             - -c
             - mkdir -p /mnt/media/downloads/complete /mnt/media/downloads/incomplete /mnt/media/downloads/watch
+          resources:
+            requests:
+              cpu: 10m
+              memory: 32Mi
+            limits:
+              cpu: 100m
+              memory: 64Mi
           volumeMounts:
             - name: media
               mountPath: /mnt/media
@@ -33,6 +40,13 @@ spec:
         - name: gluetun
           image: qmcgaw/gluetun:v3.41.1
           imagePullPolicy: IfNotPresent
+          resources:
+            requests:
+              cpu: 50m
+              memory: 128Mi
+            limits:
+              cpu: 500m
+              memory: 512Mi
           securityContext:
             capabilities:
               add:
@@ -59,6 +73,13 @@ spec:
         - name: transmission
           image: lscr.io/linuxserver/transmission:latest
           imagePullPolicy: IfNotPresent
+          resources:
+            requests:
+              cpu: 50m
+              memory: 256Mi
+            limits:
+              cpu: 500m
+              memory: 1Gi
           ports:
             - name: http
               containerPort: 9091
