--- a/apps/automation/awx.yaml
+++ b/apps/automation/awx.yaml
@@ -7,5 +7,7 @@ spec:
   ingress_type: ingress
   ingress_class_name: traefik
   hostname: awx.romanpeters.nl
+  redis_image: docker.io/redis
+  redis_image_version: 8.2.4-alpine3.22
   ingress_annotations: |
     traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
