--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -10,6 +10,8 @@ jobs:
   renovate:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Renovate
         uses: renovatebot/github-action@v46.1.0
         env:
