Configure Renovate workflow target repository

--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -17,3 +17,4 @@ jobs:
         env:
           RENOVATE_TOKEN: ${{ secrets.RENOVATE_TOKEN || secrets.GITHUB_TOKEN }}
           RENOVATE_CONFIG_FILE: .github/renovate.json
+          RENOVATE_REPOSITORIES: ${{ github.repository }}
