--- a/apps/monitoring/karma-ingress.yaml
+++ b/apps/monitoring/karma-ingress.yaml
@@ -16,6 +16,7 @@ metadata:
   namespace: monitoring
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
+    traefik.ingress.kubernetes.io/router.middlewares: infrastructure-authentik-forward-auth@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
@@ -37,7 +38,7 @@ metadata:
   namespace: monitoring
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
-    traefik.ingress.kubernetes.io/router.middlewares: monitoring-karma-redirect@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: monitoring-karma-redirect@kubernetescrd,infrastructure-authentik-forward-auth@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
