--- a/apps/monitoring/prometheus-ingress.yaml
+++ b/apps/monitoring/prometheus-ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: monitoring
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
+    traefik.ingress.kubernetes.io/router.middlewares: infrastructure-authentik-forward-auth@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
