--- a/apps/infrastructure/traefik-external-ingressroutes.yaml
+++ b/apps/infrastructure/traefik-external-ingressroutes.yaml
@@ -8,6 +8,8 @@ spec:
   routes:
     - match: Host(`home.romanpeters.nl`)
       kind: Rule
+      middlewares:
+        - name: authentik-forward-auth
       services:
         - name: home-external
           port: 8123
@@ -24,6 +26,8 @@ spec:
   routes:
     - match: Host(`kvm.romanpeters.nl`)
       kind: Rule
+      middlewares:
+        - name: authentik-forward-auth
       services:
         - name: kvm-external
           port: 80
@@ -40,6 +44,8 @@ spec:
   routes:
     - match: Host(`ollama.romanpeters.nl`)
       kind: Rule
+      middlewares:
+        - name: authentik-forward-auth
       services:
         - name: ollama-external
           port: 11434
@@ -56,6 +62,8 @@ spec:
   routes:
     - match: Host(`plex.romanpeters.nl`)
       kind: Rule
+      middlewares:
+        - name: authentik-forward-auth
       services:
         - name: plex-external
           port: 32400
@@ -72,6 +80,8 @@ spec:
   routes:
     - match: Host(`proxmox.romanpeters.nl`)
       kind: Rule
+      middlewares:
+        - name: authentik-forward-auth
       services:
         - name: proxmox-external
           port: 8006
@@ -90,6 +100,8 @@ spec:
   routes:
     - match: Host(`unifi.romanpeters.nl`)
       kind: Rule
+      middlewares:
+        - name: authentik-forward-auth
       services:
         - name: unifi-external
           port: 443
@@ -108,6 +120,8 @@ spec:
   routes:
     - match: Host(`unas.romanpeters.nl`)
       kind: Rule
+      middlewares:
+        - name: authentik-forward-auth
       services:
         - name: unas-external
           port: 443
