--- a/apps/monitoring/changedetection-ingress.yaml
+++ b/apps/monitoring/changedetection-ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: changedetection
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
+    traefik.ingress.kubernetes.io/router.middlewares: infrastructure-authentik-forward-auth@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
