--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -19,7 +19,7 @@
     {
       "matchDatasources": ["docker"],
       "matchUpdateTypes": ["minor", "patch", "digest"],
-      "automerge": false,
+      "automerge": true,
       "groupName": "docker non-major updates"
     }
   ]
