Default websecure-int to LAN allowlist

--- a/apps/system/traefik-helmchartconfig.yaml
+++ b/apps/system/traefik-helmchartconfig.yaml
@@ -8,6 +8,7 @@ spec:
     additionalArguments:
       - "--entrypoints.web.forwardedHeaders.insecure=true"
       - "--entryPoints.websecure-int.http.tls=true"
+      - "--entryPoints.websecure-int.http.middlewares=infrastructure-lan-allow-10-8@kubernetescrd"
       - "--entryPoints.websecure-ext.http.tls=true"
       - "--providers.kubernetescrd.allowExternalNameServices=true"
       - "--providers.kubernetesingress.allowExternalNameServices=true"
