--- a/apps/media/immich-redirect.yaml
+++ b/apps/media/immich-redirect.yaml
@@ -16,7 +16,7 @@ metadata:
   namespace: media
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
-    traefik.ingress.kubernetes.io/router.middlewares: media-immich-redirect@kubernetescrd,infrastructure-authentik-forward-auth@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: media-immich-redirect@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
