--- a/apps/infrastructure/homepage-rbac.yaml
+++ b/apps/infrastructure/homepage-rbac.yaml
@@ -3,6 +3,8 @@ kind: ServiceAccount
 metadata:
   name: homepage
   namespace: infrastructure
+imagePullSecrets:
+  - name: dockerhub-read
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
