--- a/apps/general/kustomization.yaml
+++ b/apps/general/kustomization.yaml
@@ -3,6 +3,8 @@ kind: Kustomization
 namespace: apps
 resources:
   - namespace.yaml
+  - dockerhub-read.sops.yaml
+  - default-serviceaccount.yaml
   - config-pvcs.yaml
   - n8n-deployment.yaml
   - n8n-service.yaml
