--- a/apps/monitoring/kustomization.yaml
+++ b/apps/monitoring/kustomization.yaml
@@ -3,6 +3,8 @@ kind: Kustomization
 namespace: monitoring
 resources:
   - namespace.yaml
+  - dockerhub-read.sops.yaml
+  - default-serviceaccount.yaml
   - config-pvcs.yaml
   - prometheus-configmap.yaml
   - prometheus-deployment.yaml
