--- a/apps/system/traefik-internal-service.yaml
+++ b/apps/system/traefik-internal-service.yaml
@@ -6,10 +6,11 @@ metadata:
   labels:
     app.kubernetes.io/instance: traefik-kube-system
     app.kubernetes.io/name: traefik
+  annotations:
+    lbipam.cilium.io/ips: 10.10.20.241
 spec:
   type: LoadBalancer
-  loadBalancerClass: metallb.universe.tf/metallb
-  loadBalancerIP: 10.10.20.241
+  loadBalancerClass: io.cilium/l2-announcer
   ports:
     - name: websecure-int
       port: 443
