Set Cilium operator replicas to one on single-node cluster

--- a/apps/system/cilium-helmrelease.yaml
+++ b/apps/system/cilium-helmrelease.yaml
@@ -22,6 +22,8 @@ spec:
     kubeProxyReplacement: true
     k8sServiceHost: 10.10.20.42
     k8sServicePort: 6443
+    operator:
+      replicas: 1
     ipam:
       mode: cluster-pool
       operator:
